WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141549
Crashes under detectItemAroundHitTestResult when DataDetectors is not available
https://bugs.webkit.org/show_bug.cgi?id=141549
Summary
Crashes under detectItemAroundHitTestResult when DataDetectors is not available
Tim Horton
Reported
2015-02-12 19:54:03 PST
Crashes under detectItemAroundHitTestResult when DataDetectors is not available
Attachments
Patch
(1.52 KB, patch)
2015-02-12 19:54 PST
,
Tim Horton
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-02-12 19:54:22 PST
Created
attachment 246498
[details]
Patch
Tim Horton
Comment 2
2015-02-12 19:59:45 PST
http://trac.webkit.org/changeset/180028
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug