Crashes under detectItemAroundHitTestResult when DataDetectors is not available https://bugs.webkit.org/show_bug.cgi?id=141549 <rdar://problem/19180955>

Reviewed by Dan Bernstein.

* editing/mac/DataDetection.mm:
(WebCore::DataDetection::detectItemAroundHitTestResult):
Bail out from data detection if either of the relevant frameworks aren't loaded.


Canonical link: https://commits.webkit.org/159574@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180028 268f45cc-cd09-0410-ab3c-d52691b4dbfc