Source/WebCore/editing/mac/DataDetection.mm
@@ -43,6 +43,9 @@ namespace WebCore {
 
 RetainPtr<DDActionContext> DataDetection::detectItemAroundHitTestResult(const HitTestResult& hitTestResult, FloatRect& detectedDataBoundingBox, RefPtr<Range>& detectedDataRange)
 {
+    if (!DataDetectorsLibrary() || !DataDetectorsCoreLibrary())
+        return nullptr;
+
     Node* node = hitTestResult.innerNonSharedNode();
     if (!node)
         return nullptr;
